Simplificando instalação de pacotes atraves de items

--- a/wordpress/provisioning.yml
+++ b/wordpress/provisioning.yml
@@ -1,20 +1,18 @@
 ---
 - hosts: all
   tasks:
-    - name: 'Instala apache2'
+    - name: 'Instala pacotes de dependecias do sistema operacional'
       apt:
-        name: apache2
+        name: "{{ item }}"
         state: latest
       become: yes
-
-    - name: 'Instala PHP'
-      apt: 
-        name: php5
-        state: latest
-      become: yes
-    
-    - name: 'Instala mod php'
-      apt:
-        name: libapache2-mod-php5
-        state: latest
-      become: yes
+      with_items:
+        - php5
+        - apache2
+        - libapache2-mod-php5
+        - php5-gd
+        - libssh2-php
+        - php5-mcrypt
+        - mysql-server
+        - python-mysqldb
+        - php5-mysql
