--- a/wordpress/provisioning.yml
+++ b/wordpress/provisioning.yml
@@ -16,3 +16,16 @@
         - mysql-server
         - python-mysqldb
         - php5-mysql
+    - name: 'Criando banco mysql'
+      mysql_db:
+        name: wordpress_db
+        login_user: root
+        state: present
+    - name: 'Cria usuario do banco'
+      mysql_user:
+        login_user: root
+        name: wordpress
+        password: 12345
+        priv: 'wordpress_db.*:ALL'
+        state: present  
+    
