--- a/wordpress/provisioning.yml
+++ b/wordpress/provisioning.yml
@@ -27,5 +27,15 @@
         name: wordpress
         password: 12345
         priv: 'wordpress_db.*:ALL'
-        state: present  
-    
+        state: present
+    - name: 'Baixa arquivos de instalação do wordpress'
+      get_url:
+        url: https://br.wordpress.org/wordpress-4.9.7-pt_BR.tar.gz
+        dest: '/tmp/wordpress.tar.gz'
+
+    - name: 'Descompactar aquivo de instalação do wordpress'
+      unarchive:
+        src: /tmp/wordpress.tar.gz
+        dest: /var/www/
+        remote_src: yes
+      become: yes
